# vibe-coding-harness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_request.yml
.github/workflows/: ci.yml
agents/: openai.yaml
assets/agents/: vibe-evaluator.toml  vibe-generator.toml  vibe-planner.toml
assets/iteration/: acceptance-contract.md  adr.md  delivery-report.md  evaluation-report.md  execution-plan.md  handoff.md  iteration.md  (+1 more)
references/: acceptance-gates.md  lifecycle.md  repository-contract.md  rule-selection.md  rules-core.md  rules-go.md  rules-java.md  rules-javascript-typescript.md  rules-python.md  rules-rust.md
schemas/: evaluation-v1.schema.json  plan-v1.schema.json  worker-result-v1.schema.json
scripts/: bootstrap_harness.py  detect_project_profile.py  harness.py  validate_harness.py
tests/: test_cli.py  test_codex_cli_adapter.py  test_codex_cli_smoke.py  test_config.py  test_controller.py  test_controller_fake_provider.py  test_controller_recovery.py  test_git_runner.py  test_harness.py  test_integrator.py  test_migration_schema3.py  test_models.py  test_package_metadata.py  test_plan_validation.py  test_prompt_registry.py  test_provider_contract.py  test_repository_health.py  test_repository_snapshot.py  test_runners.py  test_scheduler.py  test_skill.py  test_state_store.py  test_verification.py  test_worktrees.py
(+53 files in other folders)
